--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 						</li>
 					</ul>
 					<ul class="main-products__list products-grid">
-						<!-- <li class="products-grid__item" data-sort='sale'>
+						<li class="products-grid__item" data-sort='sale'>
 							<article class="product">
 								<div class="product__image _ibg">
 									<div class="product__ribbon">Sale</div>
@@ -695,7 +695,7 @@
 									</div>
 								</div>
 							</article>
-						</li> -->
+						</li>
 					</ul>
 					<div class="main-products__btn-center">
 						<button class="main-products__more _icon-down-arrow">
